<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.opyetco.meter.ReadingsActivity">
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="30dp"
        android:paddingBottom="0dp">

        <ImageView
            android:id="@+id/nodeIcon"
            android:layout_centerHorizontal="true"
            android:src="@drawable/building"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/today"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/today"
            android:layout_marginTop="-15dp"
            android:layout_centerHorizontal="true"
            android:textColor="@color/colorAccent"
            android:layout_below="@id/nodeName"
            android:textSize="20sp"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/nodeName"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/node_faculty_of_tech_building"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/nodeIcon"
            android:textSize="18sp"
            android:textAlignment="center"
            android:layout_marginBottom="40dp"
            android:textAppearance="?android:textAppearanceSmall"/>
        <TextView
            android:id="@+id/nodeReading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reading"
            android:textSize="46sp"
            android:layout_below="@id/nodeName"
            android:textAppearance="?android:textAppearanceLarge"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/nodeIndex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reading"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:layout_below="@id/nodeReading"
            android:textAppearance="?android:textAppearanceLarge"
            android:layout_centerHorizontal="true"/>

        <LinearLayout
            android:id="@+id/historyReadings"
            android:layout_below="@id/nodeIndex"
            android:layout_marginTop="30dp"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/this_month_readings"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/month_topic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/this_month"
                    android:textSize="15sp"
                    />
                <TextView
                    android:id="@+id/monthReading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/month_topic"
                    android:text="@string/reading"
                    android:textSize="25sp"
                    />

                <TextView
                    android:id="@+id/monthIndex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/monthReading"
                    android:text="@string/reading"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp"/>

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/year_topic"
                    android:textAlignment="textEnd"
                    android:gravity="end"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/this_year"
                    android:textSize="15sp"
                    />
                <TextView
                    android:id="@+id/yearReading"
                    android:textAlignment="textEnd"
                    android:gravity="end"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/year_topic"
                    android:text="@string/reading"
                    android:textSize="25sp"
                    />

                <TextView
                    android:id="@+id/yearIndex"
                    android:layout_alignParentRight="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/yearReading"
                    android:text="@string/reading"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp"/>

            </RelativeLayout>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/buttons_reading_activity"
            android:layout_width="wrap_content"
            android:layout_below="@id/notice"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true">
            <Button
                style="@style/ButtonStructure"
                android:id="@+id/setIndex"
                android:text="@string/set_index"
                android:onClick="openSetIndex"
                android:layout_marginRight="10dp"/>

            <Button
                style="@style/ButtonStructure"
                android:id="@+id/history"
                android:background="@color/colorAccent"
                android:layout_toRightOf="@id/setIndex"
                android:text="@string/history"
                android:layout_centerHorizontal="true"
                android:onClick="openHistory"/>

        </RelativeLayout>
        <TextView
            android:id="@+id/notice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:layout_marginTop="30dp"
            android:layout_below="@id/historyReadings"
            android:textSize="14sp"
            android:layout_centerHorizontal="true"
            android:text="@string/notice_reading"/>

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
